cabal-version: 2.2

name:           InlineBrainfuck
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/InlineBrainfuck#readme>
homepage:       https://github.com/t-sasaki915/InlineBrainfuck#readme
bug-reports:    https://github.com/t-sasaki915/InlineBrainfuck/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2025 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/InlineBrainfuck

library
  exposed-modules:
      Language.Brainfuck.Eval.Internal
      Language.Brainfuck.Eval
      Language.Brainfuck.Parser
      Language.Brainfuck.Token
      Language.Brainfuck
  other-modules:
      Paths_InlineBrainfuck
  autogen-modules:
      Paths_InlineBrainfuck
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , parsec ==3.1.18.0
    , text ==2.1.2
    , transformers ==0.6.1.2
    , lens ==5.3.4
    , containers ==0.7
    , monad-loops ==0.4.3
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes

test-suite InlineBrainfuck-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_InlineBrainfuck
      Language.Brainfuck.EvalSpec
      Language.Brainfuck.ParserSpec
  autogen-modules:
      Paths_InlineBrainfuck
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      InlineBrainfuck
    , base >=4.7 && <5
    , hspec ==2.11.12
    , parsec ==3.1.18.0
    , hspec-parsec ==0
    , text ==2.1.2
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes
